--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,6 +38,15 @@
   annotation={† Co-first author<br>* Corresponding author},
 }
 
+@article{huang2026token,
+  title={A Token Efficient Vision Framework Using Patch Residual Transformer for Alzheimer's Disease Diagnosis},
+  author={Huang†, Fei and Zhu†, Pengli and Chen, Nanguang and Qiu*, Anqi},
+  journal={Scientific Reports},
+  year={2026},
+  publisher={Nature Publishing Group UK London},
+  annotation={† Co-first author<br>* Corresponding author},
+}
+
 @misc{qiu2025q,
   title={Q-space Guided Diffusion-Weighted Image Synthesis Method},
   author={Qiu, Anqi and Zhu, Pengli},
